--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,10 @@
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+    <php>
+      <env name="APP_ENV" value="testing" />
+      <env name="BASE_URL" value="http://localhost" />
+    </php>
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
